--- a/src/packages/NUnit.Runners.2.6.3/tools/nunit.exe.config
+++ b/src/packages/NUnit.Runners.2.6.3/tools/nunit.exe.config
@@ -8,6 +8,7 @@
    correctly.
   -->
 	<startup useLegacyV2RuntimeActivationPolicy="true">
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
 		<!-- Comment out the next line to force use of .NET 4.0 -->
 	</startup>
 	<runtime>
