--- a/src/UI/Web.config
+++ b/src/UI/Web.config
@@ -27,6 +27,7 @@
   </appSettings>
  
   <system.web>
+    <trace enabled="true" mostRecent="true"/>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
