Added test validating the Search screen

--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -74,6 +74,9 @@
     <None Include="GivenAnApprovedExpenseReport_WhenTheWithdrawAndCancelButtonIsClicked_ThenTheCancelledScreenShouldBeDisplayed.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="GivenAUserLogsIn_WhenTheUserNavigatesToTheSearchScreen_ThenTheSearchScreenWillPopulateAndBeValidated.webtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
