Added web test for the My Expenses screen and extracted a web test for logging in as JPalermo

--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -62,6 +62,12 @@
     <None Include="ValidateWithdrawAndApproveButtonsAppearWhenUserClicksSubmit.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="ValidateSubmitterIsCurrentUserWhenOnMyExpensesPage.webtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="LoginAsJPalermo.webtest">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="WithdrawAndValidateDraftingScreenIsDisplayedWhenWithdrawIsClicked.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
