--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -66,7 +66,7 @@
     <None Include="ValidateSubmitterIsCurrentUserWhenOnMyExpensesPage.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="LoginAsJPalermo.webtest">
+    <None Include="LoginAsExistingUser.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="WithdrawAndValidateDraftingScreenIsDisplayedWhenWithdrawIsClicked.webtest">
