--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -38,6 +38,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.LoadTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.WebTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
   </ItemGroup>
@@ -51,6 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Datasources\UserNames.csv" />
+    <None Include="LoadTests\LoginLoadTests\LoadTest1.loadtest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="ValidateABlankExpenseReportScreenWithTheUserSelectsNewFromMainNav.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -104,7 +110,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="LoadTests\LoginLoadTests\" />
     <Folder Include="LoadTests\MyExpenseLoadTests\" />
     <Folder Include="LoadTests\NewExpenseReportLoadTests\" />
     <Folder Include="LoadTests\SearchLoadTests\" />
