Changed name for first load test

--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -54,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Datasources\UserNames.csv" />
-    <None Include="LoadTests\LoginLoadTests\LoadTest1.loadtest">
+    <None Include="LoadTests\LoginLoadTests\LoadTestForLoginAsUser.loadtest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="ValidateABlankExpenseReportScreenWithTheUserSelectsNewFromMainNav.webtest">
