Script will now run without think times

--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -64,6 +64,7 @@
     <None Include="LoadTests\LoginLoadTests\LoadTestForLoginAsUser.loadtest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="nothinktimes.testsettings" />
     <None Include="ValidateABlankExpenseReportScreenWithTheUserSelectsNewFromMainNav.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
