--- a/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
+++ b/src/WebPerformanceAndLoadTests/WebPerformanceAndLoadTests.csproj
@@ -65,6 +65,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="nothinktimes.testsettings" />
+    <None Include="SearchScreenOptions.loadtest">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="ValidateABlankExpenseReportScreenWithTheUserSelectsNewFromMainNav.webtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
