updated octopack and added Deploy and PostDeploy ps1's

--- a/src/packages/OctoPack.3.0.45/tools/OctoPack.targets
+++ b/src/packages/OctoPack.3.0.45/tools/OctoPack.targets
@@ -41,7 +41,7 @@
   Create Octopus Deploy package
   -->
   <Target Name="OctoPack" Condition="$(RunOctoPack)">
-    <GetAssemblyVersionInfo AssemblyFiles="$(TargetPath)">
+    <GetAssemblyVersionInfo AssemblyFiles="$(TargetPath)" Condition="'$(OctoPackPackageVersion)' == ''">
       <Output TaskParameter="AssemblyVersionInfo" ItemName="AssemblyVersions"/>
     </GetAssemblyVersionInfo>
     <PropertyGroup>
