--- a/src/UI/Web.config
+++ b/src/UI/Web.config
@@ -24,6 +24,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SiteEnvironment" value="[Development]"/>
   </appSettings>
  
   <system.web>
