--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\ExpenseReportSearch\Index.cshtml" />
     <Content Include="Views\ExpenseReport\Manage.cshtml" />
     <Content Include="Views\Shared\Menu.cshtml" />
+    <Content Include="UI.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
