--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -81,6 +81,7 @@
     <Content Include="Deploy.ps1" />
     <None Include="packages.config" />
     <Content Include="PostDeploy.ps1" />
+    <Content Include="Database.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Readme.txt" />
