--- a/src/IntegrationTests/packages.config
+++ b/src/IntegrationTests/packages.config
@@ -5,6 +5,7 @@
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="NUnit.Should" version="1.0.2.0" targetFramework="net45" />
+  <package id="OctoPack" version="3.0.45" targetFramework="net46" developmentDependency="true" />
   <package id="Should" version="1.1.20" targetFramework="net451" />
   <package id="SlowCheetah" version="2.5.14" targetFramework="net45" />
   <package id="structuremap" version="3.0.5.130" targetFramework="net45" />
