- added NUnit to the nuspec file for deployment.

--- a/src/IntegrationTests/UI.nuspec
+++ b/src/IntegrationTests/UI.nuspec
@@ -11,5 +11,6 @@
   </metadata>
   <files>
     <file src="bin\**" target="bin" />
+    <file src="..\packages\NUnit*\Tools" target="nunit"/>
   </files>
 </package>
