--- a/src/IntegrationTests/IntegrationTests.csproj
+++ b/src/IntegrationTests/IntegrationTests.csproj
@@ -116,7 +116,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <Content Include="UI.nuspec" />
-    <Content Include="PostDeploy.ps1" />
+    <Content Include="PostDeploy.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\hibernate.cfg.xml">
