--- a/src/IntegrationTests/IntegrationTests.nuspec
+++ b/src/IntegrationTests/IntegrationTests.nuspec
@@ -10,7 +10,6 @@
 
   </metadata>
   <files>
-    <file src="bin\**" target="bin" />
-    <file src="..\packages\NUnit*\Tools" target="nunit"/>
+    <file src="..\packages\NUnit*\Tools\**" target="."/>
   </files>
 </package>
