--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -278,6 +278,13 @@
     <Content Include="Views\ExpenseReport\Manage.cshtml" />
     <Content Include="Views\Shared\Menu.cshtml" />
     <Content Include="UI.nuspec" />
+    <Content Include="newrelic.config" />
+    <Content Include="newrelic.Debug.config">
+      <DependentUpon>newrelic.config</DependentUpon>
+    </Content>
+    <Content Include="newrelic.Release.config">
+      <DependentUpon>newrelic.config</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
