- fixed OctoStache version variable.

--- a/src/UI/newrelic.config
+++ b/src/UI/newrelic.config
@@ -6,7 +6,7 @@
   <application>
     <name>#{Octopus.Environment.Name}</name>
     <name>#{Octopus.Machine.Name}</name>
-    <name>#{Octopus.Environment.Name}-${Version}</name>
+    <name>#{Octopus.Environment.Name}-#{Octopus.Release.Number}</name>
   </application>
   <log level="info" />
   <transactionTracer enabled="true" transactionThreshold="apdex_f" stackTraceThreshold="500" recordSql="obfuscated" explainEnabled="true" explainThreshold="500" />
