--- a/src/SmokeTests/App.config
+++ b/src/SmokeTests/App.config
@@ -3,4 +3,7 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  <appSettings>
+    <add key="browser" value="PhantomJS"/>
+  </appSettings>
 </configuration>
