--- a/src/SmokeTests/packages.config
+++ b/src/SmokeTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.0.1" targetFramework="net452" />
+  <package id="PhantomJS" version="2.1.1" targetFramework="net452" />
   <package id="Selenium.Support" version="2.50.1" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.50.1" targetFramework="net452" />
   <package id="Should" version="1.1.20" targetFramework="net452" />
