Add code refactoring to extract relative path and browser determination
Add helper class SmokeTestPaths to handle relative pathing
Add helper class SmokeTestPageUrls to provide page urls based on page name
General refactoring to specflow scenarios to promote validating pages through convention

--- a/src/SmokeTests/App.config
+++ b/src/SmokeTests/App.config
@@ -5,5 +5,8 @@
   </configSections>
   <appSettings>
     <add key="browser" value="PhantomJS"/>
+    <add key="siteUrl" value="http://localhost:43507"/>
+    <add key="port" value="43507"/>
+    <add key ="iisExpressPath" value="C:\Program Files (x86)\IIS Express\iisexpress.exe"/>
   </appSettings>
 </configuration>
