--- a/src/SmokeTests/SmokeTests.csproj
+++ b/src/SmokeTests/SmokeTests.csproj
@@ -39,6 +39,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
@@ -71,6 +72,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Login.feature</DependentUpon>
     </Compile>
+    <Compile Include="SmokeTestPageUrls.cs" />
+    <Compile Include="SmokeTestPaths.cs" />
     <Compile Include="StepDefinitions\SmokeTestsBootstrapper.cs" />
     <Compile Include="StepDefinitions\SmokeTestSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
