--- a/src/SmokeTests/SmokeTests.csproj
+++ b/src/SmokeTests/SmokeTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1D0C240F-B6EB-4FE7-B89E-8D122E91F925}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SmokeTests</RootNamespace>
-    <AssemblyName>SmokeTests</AssemblyName>
+    <RootNamespace>ClearMeasure.Bootcamp.SmokeTests</RootNamespace>
+    <AssemblyName>ClearMeasure.Bootcamp.SmokeTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
