--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -234,6 +234,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Deploy.ps1" />
     <Content Include="PostDeploy.ps1" />
+    <Content Include="newrelic.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
