--- a/src/SmokeTests/SmokeTests.nuspec
+++ b/src/SmokeTests/SmokeTests.nuspec
@@ -11,5 +11,6 @@
   </metadata>
   <files>
     <file src="..\packages\NUnit*\Tools\**" target="."/>
+    <file src="..\packages\specflow*\Tools\**" target="."/>
   </files>
 </package>
