--- a/src/UI.DependencyResolution/UI.DependencyResolution.csproj
+++ b/src/UI.DependencyResolution/UI.DependencyResolution.csproj
@@ -107,7 +107,8 @@
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y  ".\*.dll" "..\..\..\UI\bin\"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y  ".\*.dll" "..\..\..\UI\bin\"
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
