--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Features\MutlipleExpenses\AddExpenseResult.cs" />
     <Compile Include="Features\SearchExpenseReports\ExpenseReportSpecificationQuery.cs" />
     <Compile Include="Model\Expense.cs" />
+    <Compile Include="Model\ExpenseReportWorkflow\SubmittedToDraftCommand.cs" />
     <Compile Include="Plugins\DataAccess\ExpenseReportByNumberQuery.cs" />
     <Compile Include="Plugins\DataAccess\ExpenseReportSaveCommand.cs" />
     <Compile Include="Plugins\DataAccess\MultipleResult.cs" />
